# PhysicsAnalysisGUI

./: .gitignore  CHANGELOG.md  PhysicsAnalysisGUI.py  README.md  pyproject.toml  requirements.txt  run_qt.py
physicsanalysis_qt/: __init__.py  attributes.py  background.py  context.py  field_study_config.py  fonts.py  interaction.py  marker_labels.py  markers.py  options.py  pg_engine.py  pg_interaction.py  plotting.py  sidecar.py  theme.py  toasts.py
physicsanalysis_qt/analysis/: curve_fit.py  dispatch.py  event_peth.py  fft.py  field_study_validation.py  intervals.py  models_registry.py  peak_finder.py  peth.py  splice.py  text_field_study.py  window_settings.py
physicsanalysis_qt/loaders/: generic.py  oxysoft.py  pt2.py  tdt.py  text_field_study.py
physicsanalysis_qt/ui/: edit_toolbar.py  main_window.py  toolbar.py
