[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "PhysicsAnalysisGUI"
version = "2.5.0"
description = "Desktop GUI for loading, visualising, and analysing physics lab data (TDT, Oxysoft, generic tabular, EFNMR/.pt2) and text field studies"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "openpyxl",
    "pandas",
    "PyQt6",
    "pyqtgraph",
    "ZaksPhysicsLibrary",
]
